height overflow fixed, modals centered, weird scrollbar fixed, homepage vertical centered

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -77,6 +77,14 @@ input{
 	margin:auto;
 	margin-left:3%;
 }
+#containerHome{
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+  display:inline-block;
+  width:390px;
+  height:410px;
+}
 #chat{
 	height:80%;
 }
@@ -110,7 +118,7 @@ input{
 
 /* Chat Header */
 #chatLogo{
-	margin:3px;
+	margin:3px auto;
 }
 #currentInfo{
 	width:auto;
@@ -137,7 +145,16 @@ input{
 	}
 }
 #users p:first-child{
+
 	margin-left:0;
+}
+.modal{
+	overflow: hidden;
+}
+.modal-dialog{
+	position:fixed;
+	left: 0;
+	right: 0;
 }
 	/************************************* Menus **********************************/
 
@@ -252,9 +269,6 @@ input{
 		clear:left;
 	}
 
-	#contactList .modal-content{
-		float:left;
-	}
 
 
 	#contactList h5{
@@ -374,13 +388,10 @@ input{
 		background: url("/img/selected_sphere.png") no-repeat;
 	}
 
-	#nickChange .modal-content{
-		float:left;
+	.modal-content{
+		display:inline-block;
 	}
 
-	#nickChange .modal-body{
-		float:left;
-	}
 
 	#nickChange .modal-header{
 		padding-bottom:0px;
@@ -693,9 +704,7 @@ a#bookmarklet{
 	background:$theme-dark;
 	text-decoration:none;
 }
-#logo{
-	margin-top:200px;
-}
+
 
 /* Generic Classes */
 .error{
@@ -762,4 +771,20 @@ a#bookmarklet{
 
 #rejectDeletion{
 	width:45%;
+}
+
+@media screen and (max-height:711px) {
+	#chat #chatLogo{
+		background-image:url("/img/dropsphere_xs.png");
+		width:130px;
+		height:24px;
+	}
+}
+@media screen and (min-height:712px) {
+	#chat #chatLogo{
+
+		background-image:url("/img/dropsphere_sm.png");
+		width:197px;
+		height:78px;
+	}
 }
